--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">Dicoding Android Pemula</string>
+    <string name="app_name">Bar Volume</string>
+    <string name="result">Hasil</string>
+    <string name="calculate">Hitung</string>
+    <string name="height">Tinggi</string>
+    <string name="width">Lebar</string>
+    <string name="length">Panjang</string>
+    <string name="field_ini_tidak_boleh_kosong">Field ini tidak boleh kosong</string>
 </resources>
